# parse_sysctl

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/actions/cache/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: lint.yml  test.yml
src/: config.rs  errors.rs  extractor.rs  loader.rs  main.rs  parser.rs  types.rs
