[package]
name = "parse_sysctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
tempfile = "3.10.1"
thiserror = "1.0.66"

[[bin]]
name = "parse_sysctl"
path = "src/main.rs"
